language/tests/error/TypeError04.sl
toeminto piä() {
  (1 > 2) || 4;  
}  
